Look and feel requirements added

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -136,9 +136,25 @@ involved in the Project}
 
 \section{Look and Feel Requirements}
 \subsection{Appearance Requirements}
-\lips
+\subsubsection*{Requirement LF1:}
+\begin{itemize}
+  \item \textbf{Description:} The application shall adapt to various screen sizes, ensuring legibility and an uncluttered layout.
+  \item \textbf{Rationale:} Users will have computers with varying screen sizes, so a consistent experience across all these sizes is ideal.
+  \item \textbf{Fit Criterion:} Visual elements must not exceed the boundaries of a screen with a size between the range 1024×768 pixels to 1920×1080 pixels.
+\end{itemize}
+\subsubsection*{Requirement LF2:}
+\begin{itemize}
+  \item \textbf{Description:} Interactive elements such as buttons shall provide visual feedback to the user.
+  \item \textbf{Rationale:} This will allow users a better understanding of when their actions have been processed by the application.
+  \item \textbf{Fit Criterion:} Every interactive element changes colour or displays additional visual cues, such as animations or shadows, to indicate interaction.
+\end{itemize}
 \subsection{Style Requirements}
-\lips
+\subsubsection*{Requirement LF3:}
+\begin{itemize}
+  \item \textbf{Description:} The application should maintain a unified visual design across all components.
+  \item \textbf{Rationale:} A consistent appearance enhances the application's cohesiveness and conveys a professional aesthetic.
+  \item \textbf{Fit Criterion:} Font type, sizing, and colour, along with background tones are all consistent throughout the application.
+\end{itemize}
 
 \section{Usability and Humanity Requirements}
 \subsection{Ease of Use Requirements}
