Added Usability and Human Requirements

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -161,17 +161,36 @@ involved in the Project}
 \subsection{Style Requirements}
 \lips
 
-\section{Usability and Humanity Requirements}
-\subsection{Ease of Use Requirements}
-\lips
-\subsection{Personalization and Internationalization Requirements}
-\lips
-\subsection{Learning Requirements}
-\lips
-\subsection{Understandability and Politeness Requirements}
-\lips
-\subsection{Accessibility Requirements}
-\lips
+\section*{11 Usability and Humanity Requirements}
+
+\subsection*{11.1 Ease of Use Requirement}
+\begin{itemize}[leftmargin=2cm]
+    \item \textbf{Intuitive User Interface (UI)}: The platform will have a straightforward, user-friendly UI, allowing users to quickly understand how to label images, navigate datasets, and manage their accounts with minimal training.
+    \item \textbf{Low Friction for Image Labeling}: Labelers should be able to start working on labeling tasks without the need for extensive setup or complex instructions, aiming for an onboarding process that takes under 10 minutes.
+    \item \textbf{Responsive Design}: The platform should be responsive, making it usable on a wide range of devices, including laptops, desktops, and mobile phones, without compromising functionality or performance.
+\end{itemize}
+
+\subsection*{11.2 Personalization and Internationalization Requirements}
+\begin{itemize}[leftmargin=2cm]
+    \item \textbf{User Preferences}: Users will have the option to customize their experience, including setting preferences for notifications, task assignments, and data visualization. This will enhance their efficiency and satisfaction.
+    \item \textbf{Language Support}: While the initial version may support English only, the platform should be designed to support future internationalization, allowing easy addition of multiple languages to accommodate users from different regions.
+    \item \textbf{Custom Task Allocation}: Labelers can receive tasks based on their preferred categories (e.g., agriculture, disaster management), ensuring a personalized labeling experience and increased relevance to their interests.
+\end{itemize}
+
+\subsection*{11.3 Learning Requirements}
+\begin{itemize}[leftmargin=2cm]
+    \item \textbf{Guided Onboarding and Tutorials}: The platform will include brief, step-by-step tutorials to help new users quickly understand the labeling process and the features available.
+    \item \textbf{Tooltips and Help Sections}: Throughout the platform, tooltips and easily accessible help sections will provide context-sensitive guidance to assist users without interrupting their workflow.
+    \item \textbf{User Feedback for Continuous Improvement}: A mechanism will be in place to gather user feedback about the platform’s usability and learning curve. This feedback will be used to iteratively improve the system, especially in areas where users struggle.
+\end{itemize}
+
+\subsection*{11.4 Understandability and Politeness Requirements}
+\begin{itemize}[leftmargin=2cm]
+    \item \textbf{Clear Communication}: All instructions, notifications, and error messages will be clear, concise, and free of technical jargon to ensure that users of all skill levels can understand them.
+    \item \textbf{Consistent Language and Tone}: The platform will use a friendly and professional tone across all interactions to build trust and encourage ongoing use. Terminology will be consistent throughout, avoiding confusion for new or returning users.
+    \item \textbf{Respectful Notifications}: Notifications for completed tasks, payment updates, or errors will be designed to be informative without being intrusive. Users will have control over their notification settings, allowing them to manage how and when they receive updates.
+\end{itemize}
+
 
 \section{Performance Requirements}
 \subsection{Speed and Latency Requirements}
