Added Accessibility Requirements

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -191,6 +191,12 @@ involved in the Project}
     \item \textbf{Respectful Notifications}: Notifications for completed tasks, payment updates, or errors will be designed to be informative without being intrusive. Users will have control over their notification settings, allowing them to manage how and when they receive updates.
 \end{itemize}
 
+\subsection*{11.5 Accessibility Requirements}
+\begin{itemize}[leftmargin=2cm]
+    \item \textbf{Speech Recognition Compatibility}: The platform will support speech recognition software, allowing users to interact with the system through voice commands as an alternative to manual input.
+    \item \textbf{Time-Based Media Accessibility}: Any video or audio content provided on the platform will have captions, transcripts, or audio descriptions to ensure users with hearing or visual impairments can access the information.
+    \item \textbf{Responsive Design for Accessibility}: The platform will adapt to assistive technology settings, such as high-contrast modes, screen magnifiers, and customizable accessibility settings, ensuring an optimal experience across all devices and user preferences.
+\end{itemize}
 
 \section{Performance Requirements}
 \subsection{Speed and Latency Requirements}
