Added Project Planning, Tasks, Planning of Development Phases

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -280,11 +280,31 @@ Inhibit the New Product}
 \subsection{Follow-Up Problems}
 \lips
 
-\section{Tasks}
-\subsection{Project Planning}
-\lips
-\subsection{Planning of the Development Phases}
-\lips
+\section*{21 Tasks}
+
+\subsection*{21.1 Project Planning}
+\begin{itemize}[leftmargin=2cm]
+    \item \textbf{Define Clear Milestones}: Establish milestones based on key project phases, such as requirements gathering, hazard analysis, proof of concept, backend development, and final project demonstration.
+    \item \textbf{Task Assignment and Role Allocation}: Assign tasks to team members based on their strengths and expertise, with clear ownership over specific deliverables (e.g., backend development, frontend development, documentation, testing).
+    \item \textbf{Use of Project Management Tools}: Utilize tools like Kanban boards in GitHub Projects to track progress, organize tasks into 'To Do,' 'In Progress,' and 'Completed' categories, and set internal deadlines to meet project milestones effectively.
+    \item \textbf{Risk Management and Mitigation}: Identify potential project risks (e.g., data quality issues, development delays) and create mitigation strategies, including regular check-ins, backup plans, and prioritization of critical tasks.
+\end{itemize}
+
+\subsection*{21.2 Planning of the Development Phases}
+\begin{itemize}[leftmargin=2cm]
+    \item \textbf{Requirements Gathering (24-Sep-2024 to 08-Oct-2024)}: Engage in detailed discussions with stakeholders to gather comprehensive requirements for both frontend and backend components, ensuring all technical and business needs are documented.
+    \item \textbf{Hazard Analysis (10-Oct-2024 to 23-Oct-2024)}: Identify risks related to data handling, server security, and other critical project components. Develop a hazard analysis document to mitigate potential threats, especially in handling satellite imagery.
+    \item \textbf{Verification \& Validation (V\&V) Planning (24-Oct-2024 to 01-Nov-2024)}: Develop a detailed V\&V plan, including test plans and quality assurance measures. This will include setting up testing environments and criteria for ensuring code correctness and reliability.
+    \item \textbf{Proof of Concept (01-Nov-2024 to 22-Nov-2024)}: Develop basic functionality for both backend and frontend, demonstrating image processing, API development, and the labeling workflow. Gather feedback to identify areas of improvement.
+    \item \textbf{Backend Development (23-Nov-2024 to 05-Jan-2025)}: Focus on developing API endpoints, integrating satellite image data, and ensuring secure and efficient handling of large datasets. Aim to have a functional backend by the end of this phase.
+    \item \textbf{Frontend Development (23-Nov-2024 to 05-Jan-2025)}: Design and implement UI/UX features, integrate backend APIs, and ensure an interactive user experience for both clients and labelers. Aim for a fully functional frontend that complements backend capabilities.
+    \item \textbf{Design Document Revision (15-Dec-2024 to 15-Jan-2025)}: Revise the design document to reflect final system architecture, covering database schema, API structure, and AI model integration.
+    \item \textbf{Mid-Project Demonstration (03-Feb-2025 to 14-Feb-2025)}: Prepare a functional prototype showcasing the integrated backend, frontend, and APIs. Demonstrate the labeling process, data flow, and key system functionalities.
+    \item \textbf{Verification \& Validation (15-Feb-2025 to 07-Mar-2025)}: Test data processing pipelines, system reliability, and user interfaces to ensure accuracy and consistency. Run automated and manual tests for different use cases.
+    \item \textbf{Final Project Demonstration \& Expo Preparation (24-Mar-2025 to 01-Apr-2025)}: Demonstrate the complete system, including all functionality, datasets, and models. Fine-tune UI and prepare for a polished presentation at the Expo.
+    \item \textbf{Final Documentation (01-Apr-2025 to 15-Apr-2025)}: Compile comprehensive final reports covering the entire development process, technical documentation, user manuals, and deployment guides.
+\end{itemize}
+
 
 \section{Costs}
 \lips
