Added off the shelf solutions

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -234,11 +234,11 @@ involved in the Project}
 
 \section{Off-the-Shelf Solutions}
 \subsection{Ready-Made Products}
-\lips
+\textbf{Amazon Mechanical Turk: } A web-based crowdsourcing platform. Instead of building a novel front end, the system could obtain labels through this platform instead.
 \subsection{Reusable Components}
-\lips
+\textbf{Label Studio: } A React library which contains components for building a web-based data annotation platform.
 \subsection{Products That Can Be Copied}
-\lips
+\textbf{Tolka AI: } A general purpose image label crowdsourcing site. Supports image segmentation, bounding box drawing, and more computer vision labeling tasks.
 
 \section{New Problems}
 \subsection{Effects on the Current Environment}
