Added open issues

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -230,7 +230,9 @@ involved in the Project}
 \lips
 
 \section{Open Issues}
-\lips
+\textbf{Task Assignment Algorithm: }To ensure labelers are engaged as they complete tasks and to obtain the highest quality of information possible, the system must implement an intelligent task allocation system. This system has not yet been determined.
+\\\textbf{Label Consensus Algorithm: }Similarly, the algorithm for combining multiple user labels into one accurate label has not yet been determined. 
+\\\textbf{Labeling Services Offered: }The system has determined several potential labeling services to be offered by the system, but has not confirmed with certainty what will be included. This will be determined after more research has been completed on the task assignment algorithm.
 
 \section{Off-the-Shelf Solutions}
 \subsection{Ready-Made Products}
